--- a/trunk/shareaza/Shareaza.rc
+++ b/trunk/shareaza/Shareaza.rc
@@ -126,8 +126,8 @@ IDR_BITTORRENT_ICON     ICON                    "res\\Bittorrent.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,1,0,20
- PRODUCTVERSION 2,1,0,20
+ FILEVERSION 2,1,0,21
+ PRODUCTVERSION 2,1,0,21
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -145,12 +145,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 1, 0, 20"
+            VALUE "FileVersion", "2, 1, 0, 21"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2004."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 1, 0, 20"
+            VALUE "ProductVersion", "2, 1, 0, 21"
         END
     END
     BLOCK "VarFileInfo"
@@ -1146,68 +1146,67 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,145,130,12
 END
 
-IDD_SETTINGS_GNUTELLA DIALOG  0, 0, 282, 220
+IDD_SETTINGS_GNUTELLA DIALOGEX 0, 0, 282, 220
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Gnutella"
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "Gnutella2 Network (recommended):",IDC_STATIC,5,5,145,35,
-                    WS_GROUP
+    GROUPBOX        "Gnutella2 Network:",IDC_STATIC,8,13,130,60,WS_GROUP
+    LTEXT           "(G2 recommended)",IDC_STATIC,25,25,103,8
     CONTROL         "Connect to Gnutella2 today",IDC_G2_TODAY,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,15,20,130,12
-    GROUPBOX        "Gnutella1 Network:",IDC_STATIC,5,45,145,45,WS_GROUP
-    CONTROL         "Connect to Gnutella1 today",IDC_G1_TODAY,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,15,59,125,8
-    CONTROL         "Always connect to Gnutella1",IDC_G1_ALWAYS,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,15,73,125,8
-    GROUPBOX        "&Hub Election:",IDC_STATIC,5,95,145,80,WS_GROUP
-    CONTROL         "Allow this node to become a Hub",IDC_ULTRAPEER_ENABLE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,110,125,12
-    CONTROL         "Force this node to be a Hub",IDC_ULTRAPEER_FORCE,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,30,125,110,12
-    CONTROL         "Allow this node to become a Leaf",IDC_ULTRALEAF_ENABLE,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,140,125,12
-    CONTROL         "Accept only Hub connections",IDC_ULTRALEAF_FORCE,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,30,155,110,12
-    GROUPBOX        "Gnutella-G&2:",IDC_STATIC,160,5,115,85,WS_GROUP
-    LTEXT           "Leaf to Hub:",IDC_STATIC,170,25,55,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_G2_HUBS,230,25,35,12,ES_AUTOHSCROLL | ES_NUMBER
+                    BS_AUTOCHECKBOX | WS_TABSTOP,11,38,125,8
+    LTEXT           "Mode: ",IDC_STATIC,16,56,55,8,0,WS_EX_RIGHT
+    COMBOBOX        IDC_G2_CLIENTMODE,75,53,54,54,CBS_DROPDOWNLIST | 
+                    WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "G&2 Connections:",IDC_STATIC,7,84,130,75,WS_GROUP
+    LTEXT           "Leaf to Hub:",IDC_STATIC,18,95,65,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_G2_HUBS,87,95,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_G2_HUBS_SPIN,"msctls_updown32",
                     UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
-                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,25,8,12
-    LTEXT           "Hub to Leaf:",IDC_STATIC,170,45,55,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_G2_LEAFS,230,45,35,12,ES_AUTOHSCROLL | ES_NUMBER
+                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,123,95,11,12
+    LTEXT           "Hub to Leaf:",IDC_STATIC,18,116,65,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_G2_LEAFS,87,116,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_G2_LEAFS_SPIN,"msctls_updown32",
                     UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
-                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,45,8,12
-    LTEXT           "Hub to Hub:",IDC_STATIC,170,65,55,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_G2_PEERS,230,65,35,12,ES_AUTOHSCROLL | ES_NUMBER
+                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,123,116,11,12
+    LTEXT           "Hub to Hub:",IDC_STATIC,18,137,65,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_G2_PEERS,87,137,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_G2_PEERS_SPIN,"msctls_updown32",
                     UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
-                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,65,8,12
-    GROUPBOX        "Gnutella-G&1:",IDC_STATIC,160,95,115,80,WS_GROUP
-    LTEXT           "Leaf to Hub:",IDC_STATIC,170,110,55,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_G1_HUBS,230,110,35,12,ES_AUTOHSCROLL | ES_NUMBER
+                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,123,137,11,12
+    GROUPBOX        "Gnutella1 Network:",IDC_STATIC,142,13,133,60,WS_GROUP
+    CONTROL         "Always connect to Gnutella1",IDC_G1_ALWAYS,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,145,25,125,8
+    CONTROL         "Connect to Gnutella1 today",IDC_G1_TODAY,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,145,38,125,8
+    LTEXT           "Mode: ",IDC_STATIC,150,55,56,8,0,WS_EX_RIGHT
+    COMBOBOX        IDC_G1_CLIENTMODE,209,53,54,53,CBS_DROPDOWNLIST | 
+                    WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "G&1 Connections:",IDC_STATIC,142,84,133,75,WS_GROUP
+    LTEXT           "Leaf to Ultrapeer:",IDC_STATIC,160,95,65,12,
+                    SS_CENTERIMAGE
+    EDITTEXT        IDC_G1_HUBS,230,95,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_G1_HUBS_SPIN,"msctls_updown32",
                     UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
-                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,110,8,12
-    LTEXT           "Hub to Leaf:",IDC_STATIC,170,130,55,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_G1_LEAFS,230,130,35,12,ES_AUTOHSCROLL | ES_NUMBER
+                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,95,8,12
+    LTEXT           "Ultrapeer to Leaf:",IDC_STATIC,160,116,65,12,
+                    SS_CENTERIMAGE
+    EDITTEXT        IDC_G1_LEAFS,230,116,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_G1_LEAFS_SPIN,"msctls_updown32",
                     UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
-                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,130,8,12
-    LTEXT           "Hub to Hub:",IDC_STATIC,170,150,55,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_G1_PEERS,230,150,35,12,ES_AUTOHSCROLL | ES_NUMBER
+                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,116,8,12
+    LTEXT           "Peer to Peer:",IDC_STATIC,160,137,65,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_G1_PEERS,230,137,35,12,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Spin1",IDC_G1_PEERS_SPIN,"msctls_updown32",
                     UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
-                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,150,8,12
-    GROUPBOX        "&Link Compression:",IDC_STATIC,5,180,270,35,WS_GROUP
+                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,266,137,8,12
+    GROUPBOX        "&Link Compression:",IDC_STATIC,5,172,270,33,WS_GROUP
     CONTROL         "Hub to Leaf",IDC_DEFLATE_HUB2LEAF,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,15,192,80,17
+                    BS_AUTOCHECKBOX | WS_TABSTOP,15,183,80,17
     CONTROL         "Leaf to Hub",IDC_DEFLATE_LEAF2HUB,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,100,192,80,17
+                    BS_AUTOCHECKBOX | WS_TABSTOP,100,183,80,17
     CONTROL         "Hub to Hub",IDC_DEFLATE_HUB2HUB,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,185,192,80,17
+                    BS_AUTOCHECKBOX | WS_TABSTOP,185,183,80,17
 END
 
 IDD_SETTINGS_ADVANCED DIALOG  0, 0, 282, 220
@@ -2971,32 +2970,11 @@ STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "BitTorrent"
 FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "&Store Torrents Here:",IDC_STATIC,5,110,270,33,WS_GROUP
-    EDITTEXT        IDC_TORRENTS_FOLDER,15,122,225,12,ES_AUTOHSCROLL | 
-                    ES_READONLY | NOT WS_TABSTOP
-    PUSHBUTTON      "",IDC_TORRENTS_BROWSE,245,118,23,20
-    GROUPBOX        "&Download Connections:",IDC_STATIC,5,37,270,44
-    EDITTEXT        IDC_TORRENT_CLIENTLINKS,15,64,35,12,ES_AUTOHSCROLL | 
-                    ES_NUMBER
-    CONTROL         "",IDC_TORRENTLINKS_SPIN,"msctls_updown32",
-                    UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
-                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,51,64,11,12
-    LTEXT           "Client connections",IDC_STATIC,65,64,201,12,
-                    SS_CENTERIMAGE
     GROUPBOX        "&Interface:",IDC_STATIC,6,8,270,27
     CONTROL         "Display additional BitTorrent interface elements",
                     IDC_TORRENT_INTERFACE,"Button",BS_AUTOCHECKBOX | 
                     WS_GROUP | WS_TABSTOP,16,17,250,15
-    GROUPBOX        "&EndGame:",IDC_STATIC,6,82,270,27
-    CONTROL         "Enable EndGame mode when completing torrents",
-                    IDC_TORRENT_ENDGAME,"Button",BS_AUTOCHECKBOX | WS_GROUP | 
-                    WS_TABSTOP,16,91,250,15
-    GROUPBOX        "&Torrent Creator:",IDC_STATIC,5,145,270,33,WS_GROUP
-    RTEXT           "Tracker:",IDC_STATIC,15,192,47,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_TORRENT_DEFAULTTRACKER,72,192,194,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_TORRENTS_TORRENTMAKER,15,158,225,12,ES_AUTOHSCROLL | 
-                    ES_READONLY | NOT WS_TABSTOP
-    PUSHBUTTON      "",IDC_TORRENTS_TORRENTMAKERBROWSE,245,154,23,20
+    GROUPBOX        "&Download Connections:",IDC_STATIC,5,37,270,44
     EDITTEXT        IDC_TORRENT_DOWNLOADS,15,48,35,12,ES_AUTOHSCROLL | 
                     ES_NUMBER
     CONTROL         "",IDC_TORRENT_DOWNLOADS_SPIN,"msctls_updown32",
@@ -3004,7 +2982,28 @@ BEGIN
                     UDS_ARROWKEYS | UDS_NOTHOUSANDS,51,48,11,12
     LTEXT           "Torrents at once",IDC_STATIC,65,48,201,12,
                     SS_CENTERIMAGE
+    EDITTEXT        IDC_TORRENT_CLIENTLINKS,15,64,35,12,ES_AUTOHSCROLL | 
+                    ES_NUMBER
+    CONTROL         "",IDC_TORRENT_LINKS_SPIN,"msctls_updown32",
+                    UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
+                    UDS_ARROWKEYS | UDS_NOTHOUSANDS,51,64,11,12
+    LTEXT           "Client connections",IDC_STATIC,65,64,201,12,
+                    SS_CENTERIMAGE
+    GROUPBOX        "&EndGame:",IDC_STATIC,6,82,270,27
+    CONTROL         "Enable EndGame mode when completing torrents",
+                    IDC_TORRENT_ENDGAME,"Button",BS_AUTOCHECKBOX | WS_GROUP | 
+                    WS_TABSTOP,16,91,250,15
+    GROUPBOX        "&Store Torrents Here:",IDC_STATIC,5,110,270,33,WS_GROUP
+    EDITTEXT        IDC_TORRENTS_FOLDER,15,122,225,12,ES_AUTOHSCROLL | 
+                    ES_READONLY | NOT WS_TABSTOP
+    PUSHBUTTON      "",IDC_TORRENTS_BROWSE,245,118,23,20
+    GROUPBOX        "&Torrent Creator:",IDC_STATIC,5,145,270,33,WS_GROUP
+    EDITTEXT        IDC_TORRENTS_TORRENTMAKER,15,158,225,12,ES_AUTOHSCROLL | 
+                    ES_READONLY | NOT WS_TABSTOP
+    PUSHBUTTON      "",IDC_TORRENTS_TORRENTMAKERBROWSE,245,154,23,20
     GROUPBOX        "Default Tracker:",IDC_STATIC,5,180,270,33,WS_GROUP
+    RTEXT           "Tracker:",IDC_STATIC,15,192,47,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_TORRENT_DEFAULTTRACKER,72,192,194,12,ES_AUTOHSCROLL
 END
 
 IDD_SETTINGS_SCHEDULER DIALOGEX 0, 0, 282, 220
@@ -4094,6 +4093,23 @@ BEGIN
 0x6d20, 0x6e61, "\000" 
     IDC_PROFILE_GENDER, 0x403, 7, 0
 0x7720, 0x6d6f, 0x6e61, "\000" 
+    0
+END
+
+IDD_SETTINGS_GNUTELLA DLGINIT
+BEGIN
+    IDC_G2_CLIENTMODE, 0x403, 8, 0
+0x704f, 0x6974, 0x616d, 0x006c, 
+    IDC_G2_CLIENTMODE, 0x403, 5, 0
+0x654c, 0x6661, "\000" 
+    IDC_G2_CLIENTMODE, 0x403, 4, 0
+0x7548, 0x0062, 
+    IDC_G1_CLIENTMODE, 0x403, 8, 0
+0x704f, 0x6974, 0x616d, 0x006c, 
+    IDC_G1_CLIENTMODE, 0x403, 5, 0
+0x654c, 0x6661, "\000" 
+    IDC_G1_CLIENTMODE, 0x403, 10, 0
+0x6c55, 0x7274, 0x7061, 0x6565, 0x0072, 
     0
 END
 
