--- a/trunk/shareaza/Shareaza.rc
+++ b/trunk/shareaza/Shareaza.rc
@@ -126,8 +126,8 @@ IDR_BITTORRENT_ICON     ICON                    "res\\Bittorrent.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,1,0,35
- PRODUCTVERSION 2,1,0,35
+ FILEVERSION 2,1,0,37
+ PRODUCTVERSION 2,1,0,37
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -145,12 +145,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2, 1, 0, 35"
+            VALUE "FileVersion", "2, 1, 0, 37"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2004."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 1, 0, 35"
+            VALUE "ProductVersion", "2, 1, 0, 37"
         END
     END
     BLOCK "VarFileInfo"
@@ -5451,6 +5451,10 @@ END
 
 STRINGTABLE 
 BEGIN
+    IDS_STATUS_BAR_CONNECTED_HUB_UP 
+                            "Hub/Ultrapeer mode with %lu neighbour(s).  %s in local library."
+    IDS_STATUS_BAR_CONNECTED_UP 
+                            "Ultrapeer mode with %lu neighbour(s).  %s in local library."
     IDS_STATUS_BAR_CONNECTED_HUB 
                             "Hub mode with %lu neighbour(s).  %s in local library."
     IDS_STATUS_BAR_CONNECTED_SIMPLE "Connected. %s in local library."
