--- a/trunk/shareaza/Shareaza.rc
+++ b/trunk/shareaza/Shareaza.rc
@@ -2840,9 +2840,9 @@ BEGIN
     COMBOBOX        IDC_TORRENT_VIEW,60,210,65,40,CBS_DROPDOWNLIST | NOT 
                     WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
     DEFPUSHBUTTON   "Close",IDOK,235,210,50,14
-    COMBOBOX        IDC_STARTTORRENTDOWNLOADS,184,101,91,66,CBS_DROPDOWNLIST | 
-                    WS_VSCROLL | WS_TABSTOP
-    RTEXT           "Start new download transfers:",IDC_STATIC,26,103,154,9
+    COMBOBOX        IDC_STARTTORRENTDOWNLOADS,163,101,112,66,
+                    CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Start new download transfers:",IDC_STATIC,15,103,143,9
     GROUPBOX        "Transfers:",IDC_STATIC,5,92,280,27
 END
 
